Fix fonts and spacing

--- a/src/assets/scss/colors/color.scss
+++ b/src/assets/scss/colors/color.scss
@@ -1,4 +1,6 @@
-$background-white: #fff;
+$white: #fff;
+
+$background-white: $white;
 $background-light: #fff6f3;
 $accent-dark: #0d0243;
 $main: #df5325;
